# weather

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  environment.yml  pyproject.toml
.agents/skills/aiseed-conventions/: SKILL.md
.agents/skills/chart-base-design/: SKILL.md
.agents/skills/climatology-analysis/: SKILL.md
.agents/skills/data-flow/: SKILL.md
.agents/skills/ecmwf-data-access/: SKILL.md
.agents/skills/figure-export/: SKILL.md
.agents/skills/first-run-setup/: SKILL.md
WeatherStatic/: .gitignore  DATA_CONTRACT.md  DATA_SOURCES.md  DESIGN.md  README.md  STORAGE_FORMATS.md  accumulate.py  aggregate_votes.py  backfill_daily.py  backfill_etrn.py  build_master.py  export_dist.py  fetch_data.py  fetch_station_codes.py  fetch_tiles.py  fetch_world.py  generate.py  requirements.txt
WeatherStatic/assets/: site.css
WeatherStatic/templates/: _layout.html  home.html
WeatherStatic/weatherlib/: etrn.py  filters.py  jma.py  ncstore.py  season.py  stations.py  store.py  suikei.py  svgchart.py  world.py
docs/: article-flet-as-modern-vb.md  data-acquisition.md  forecast-charts.md  forecast-distribution.md  forecast-spec.md  operations.md  r2-deployment.md
notebooks/: 01-quickstart.ipynb  02-ecmwf-grib2.ipynb  03-point-forecast.ipynb  04-jma-nowcast.ipynb  05-custom-chart.ipynb  06-era5-climatology-gcp.ipynb  README.en.md  README.md
src/aiseed_weather/: __init__.py  main.py
tests/: test_download_bench.py  test_run_selector.py  test_user_settings.py
tools/: publish_charts.py  publish_forecast.py
(+104 files in other folders)
